# llama.cpp

./: CMakeLists.txt
ggml/: CMakeLists.txt
ggml/src/: CMakeLists.txt  ggml-backend-reg.cpp
ggml/src/ggml-rknpu2/: CMakeLists.txt  ggml-rknpu2.cpp  ggml-rknpu2.h
